Fix Radio Question alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -224,6 +224,7 @@ input, textarea, select, .uneditable-input {
 
 input.button {
   margin-top: 50px;
+  width: 100%;
 }
 
 input {
